tests/ui/unsafe/unsafe-fn-used-as-value.stderr
error[E0133]: call to unsafe function `f` is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-used-as-value.rs:7:5
   |
LL |     x();
   |     ^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
